Playable demo of the Steamroll concept to test the camera, physics and materials. It is possible to shoot balls at different speeds depending on charge time.

--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -1,12 +1,34 @@
 [URL]
 GameName=Steamroll
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-980.0
+DefaultGravityZ=-1580.000000
+DefaultTerminalVelocity=4000.000000
+bEnableAsyncScene=False
+LockedAxis=None
+FrictionCombineMode=Average
+MaxDepenetrationVelocity=0.000000
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=False
+MaxSubstepDeltaTime=0.016667
+MaxSubsteps=6
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
+
 [/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Engine/Maps/Templates/Template_Default
 EditorStartupMap=/Game/Maps/Example_Map
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameDefaultMap=/Engine/Maps/Entry
 GameDefaultMap=/Game/Maps/Example_Map
-GlobalDefaultGameMode=/Script/Steamroll.SteamrollGameMode
-
-
+GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/Blueprints/SteamRollDemoGameMode.SteamRollDemoGameMode_C
+GlobalDefaultServerGameMode=None
 
 
 [/Script/Engine.Engine]
