Missing file for last commit plus updated .gitignore .

--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -17,6 +17,12 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 
+[/Script/Engine.Engine]
++ActiveGameNameRedirects=(OldGameName="TP_Rolling",NewGameName="/Script/Steamroll")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Rolling",NewGameName="/Script/Steamroll")
++ActiveClassRedirects=(OldClassName="TP_RollingGameMode",NewClassName="SteamrollGameMode")
++ActiveClassRedirects=(OldClassName="TP_RollingBall",NewClassName="SteamrollBall")
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Engine/Maps/Templates/Template_Default
 EditorStartupMap=/Game/Maps/Example_Map
@@ -27,12 +33,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameDefaultMap=/Engine/Maps/Entry
 GameDefaultMap=/Game/Maps/Example_Map
 GlobalDefaultGameMode=/Script/Engine.GameMode
-GlobalDefaultGameMode=/Game/Blueprints/SteamRollDemoGameMode.SteamRollDemoGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/SteamrollGameMode.SteamrollGameMode_C
 GlobalDefaultServerGameMode=None
 
 
-[/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Rolling",NewGameName="/Script/Steamroll")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Rolling",NewGameName="/Script/Steamroll")
-+ActiveClassRedirects=(OldClassName="TP_RollingGameMode",NewClassName="SteamrollGameMode")
-+ActiveClassRedirects=(OldClassName="TP_RollingBall",NewClassName="SteamrollBall")
