The Steamroll demo is now playable in networked mode with replication of the player base orientation, ball movement, movable meshes and particle effects. Added a top-down mini-map using the SceneCapture2d and RenderToTexture features of UE4. Added a proof of concept 3D HUD with the power of the current ball, completely independent of the main scene with its own UWorld using the experimental UMG viewport widget.

--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -33,7 +33,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameDefaultMap=/Engine/Maps/Entry
 GameDefaultMap=/Game/Maps/Example_Map
 GlobalDefaultGameMode=/Script/Engine.GameMode
-GlobalDefaultGameMode=/Game/Blueprints/SteamrollGameMode.SteamrollGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/SteamrollTestGameMode.SteamRollTestGameMode_C
 GlobalDefaultServerGameMode=None
 
 
