Made the balls drag more so that they come to a halt faster, after a certain time they will start damping more and more. Implemented the first version of the wall component, which deploys a solid wall that will grow until it finds an obstacle. Capped the framerate at 60fps.

--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -36,4 +36,7 @@ GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultGameMode=/Game/Blueprints/SteamrollTestGameMode.SteamRollTestGameMode_C
 GlobalDefaultServerGameMode=None
 
+[SystemSettings]
+t.MaxFPS=60
+
 
