Remade the slot control widget to make it more compact and presentable. Added the wall deployment angle control, walls can be spawned at arbitrary directions. Improved the physics engine configuration so that simulation artifacts are greatly reduced. Improved the ball stopping system to make it more natural and prevent already sleeping/dragging balls from falling at very slow speeds. Mapped the number keys to the firing action, where "1" shoots at 10% power, "0" at 100%, etc.

--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -1,22 +1,6 @@
 [URL]
 GameName=Steamroll
 
-[/Script/Engine.PhysicsSettings]
-DefaultGravityZ=-980.0
-DefaultGravityZ=-1580.000000
-DefaultTerminalVelocity=4000.000000
-bEnableAsyncScene=False
-LockedAxis=None
-FrictionCombineMode=Average
-MaxDepenetrationVelocity=0.000000
-MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
-SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
-InitialAverageFrameRate=0.016667
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Rolling",NewGameName="/Script/Steamroll")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Rolling",NewGameName="/Script/Steamroll")
@@ -38,5 +22,21 @@ GlobalDefaultServerGameMode=None
 
 [SystemSettings]
 t.MaxFPS=60
+
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-980.0
+DefaultGravityZ=-1580.000000
+DefaultTerminalVelocity=4000.000000
+bEnableAsyncScene=False
+LockedAxis=None
+FrictionCombineMode=Average
+MaxDepenetrationVelocity=0.000000
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=True
+MaxSubstepDeltaTime=0.001667
+MaxSubsteps=16
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
 
 
