Added a laser sight to help the player aim, the laser rebounds one time. Tweaked physics a bit to prevent velocity explosion when there's object interpenetration. Added functionality to undeploy the player base into a base ball to move the base around the level. Abstracted common functionality of PlayerBase and BaseBall into SteamrollPawn class.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -33,6 +33,7 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="RemoteTrigger",Key=Enter,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="RaiseCamera",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="LowerCamera",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Undeploy",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
