Added new camera component. Multiple cams can be deployed and viewed/cycled through the radar screen as well as change their orientation.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -34,6 +34,13 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="RaiseCamera",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="LowerCamera",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Undeploy",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MainCamera",Key=Home,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="NextCamera",Key=PageUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PrevCamera",Key=PageDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="BallCamUp",Key=NumPadTwo,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="BallCamDown",Key=NumPadEight,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="BallCamRight",Key=NumPadSix,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="BallCamLeft",Key=NumPadFour,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
