Added magnet and repel functionality. Added collect resource functionality. Made explosive balls not explode when they stop when they have a trigger and made chain explosions have a second of lag between them. Suppressed annoying pause message.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -41,6 +41,8 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="BallCamDown",Key=NumPadEight,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="BallCamRight",Key=NumPadSix,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="BallCamLeft",Key=NumPadFour,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Magnet",Key=M,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MagnetRepel",Key=N,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
