Reworked slot config system to support two parameters per slot instead of one per ball. Turned off physics substepping for the moment as it works well enough without for the moment.

--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -27,12 +27,13 @@ t.MaxFPS=60
 DefaultGravityZ=-980.0
 DefaultGravityZ=-1580.000000
 DefaultTerminalVelocity=4000.000000
+DefaultFluidFriction=0.300000
 bEnableAsyncScene=False
 LockedAxis=None
 FrictionCombineMode=Average
 MaxDepenetrationVelocity=1000.000000
 MaxPhysicsDeltaTime=0.033333
-bSubstepping=True
+bSubstepping=False
 MaxSubstepDeltaTime=0.001667
 MaxSubsteps=16
 SyncSceneSmoothingFactor=0.000000
