First version of the custom made ball physics system that replaces the unreal built-in one as there are several problems with it such as the balls hitting internal edges.

--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -10,23 +10,6 @@ GameName=Steamroll
 [SystemSettings]
 t.MaxFPS=60
 
-[/Script/Engine.PhysicsSettings]
-DefaultGravityZ=-980.0
-DefaultGravityZ=-1580.000000
-DefaultTerminalVelocity=4000.000000
-DefaultFluidFriction=0.300000
-bEnableAsyncScene=False
-LockedAxis=None
-FrictionCombineMode=Average
-MaxDepenetrationVelocity=1000.000000
-MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-MaxSubstepDeltaTime=0.001667
-MaxSubsteps=16
-SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
-InitialAverageFrameRate=0.016667
-
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Engine/Maps/Templates/Template_Default
 EditorStartupMap=/Game/Maps/ExplosionChain
@@ -39,5 +22,22 @@ GameDefaultMap=/Game/Maps/Example_Map
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultGameMode=/Game/Blueprints/SteamrollTestGameMode.SteamRollTestGameMode_C
 GlobalDefaultServerGameMode=None
+
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-980.0
+DefaultGravityZ=-1580.000000
+DefaultTerminalVelocity=4000.000000
+DefaultFluidFriction=0.300000
+bEnableAsyncScene=False
+LockedAxis=None
+FrictionCombineMode=Average
+MaxDepenetrationVelocity=1000.000000
+MaxPhysicsDeltaTime=0.100000
+bSubstepping=True
+MaxSubstepDeltaTime=0.001667
+MaxSubsteps=16
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
 
 
