New free camera mode, switched on with the 'c' key that lets the player move the camera around the level with the arrow keys. The ball simulation system has been greatly improved and is now very usable, the debug drawing calls have been eliminated so performance is good enough.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -38,22 +38,23 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="Magnet",Key=M,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="MagnetRepel",Key=N,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FireSimulation",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SwitchCamera",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Down,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftStick_Right,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftStick_Left,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="CameraForward",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="CameraRight",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="CameraForward",Key=Down,Scale=-1.000000)
++AxisMappings=(AxisName="CameraRight",Key=Left,Scale=-1.000000)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
