--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -41,6 +41,7 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 
 [/Script/Engine.RendererSettings]
+r.Shadow.RadiusThreshold=0.01
 r.MobileHDR=True
 r.AllowOcclusionQueries=True
 r.MinScreenRadiusForLights=0.030000
