Extended UE4's Player start with a custom version to be able to choose whether to initially spawn a baseball or a playerbase in one of the deployment spots in the level.

--- a/Steamroll/Config/DefaultGame.ini
+++ b/Steamroll/Config/DefaultGame.ini
@@ -5,8 +5,7 @@ ProjectName=Rolling Game Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
-CopyrightNotice="// Copyright Anticto Estudi Binari, SL. All rights reserved.
-"
+CopyrightNotice=Copyright Anticto Estudi Binari, SL. All rights reserved.
 ProjectID=E5536ABA43030C5D01E928970DF21FD3
 ProjectName=
 
