--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -98,7 +98,7 @@ UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,Name="RealBallTraceChannel",DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,Name="OnlyDynamicPhysics",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
 +EditProfiles=(Name="NoCollision",CustomResponses=((Channel="RealBallTraceChannel",Response=ECR_Ignore)))
-+EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="RealBallTraceChannel",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="RealBallTraceChannel",Response=ECR_Overlap),(Channel="RealBall",Response=ECR_Overlap),(Channel="VirtualBall",Response=ECR_Ignore),(Channel="DynamicPhysics",Response=ECR_Ignore)))
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="RealBallTraceChannel",Response=ECR_Overlap)))
 +EditProfiles=(Name="Spectator",CustomResponses=((Channel="RealBallTraceChannel",Response=ECR_Ignore)))
 +ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
