--- a/Steamroll/Config/DefaultGame.ini
+++ b/Steamroll/Config/DefaultGame.ini
@@ -1,12 +1,11 @@
 [ProjectSettings]
 GameID=0C2ABB55A39F4A739FBB463F76BF0FA7
-ProjectName=Rolling Game Template
+ProjectName=Steamroll
 
 
 [/Script/EngineSettings.GeneralProjectSettings]
-CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
 CopyrightNotice=Copyright Anticto Estudi Binari, SL. All rights reserved.
 ProjectID=E5536ABA43030C5D01E928970DF21FD3
-ProjectName=
+ProjectName=Steamroll
 
 
