First version of the new 3D ui.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -50,6 +50,14 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="Pause",Key=Global_Back,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ChargeUp",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ChargeDown",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuUp",Key=Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuDown",Key=Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuLeft",Key=Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuRight",Key=Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuUp",Key=Gamepad_DPad_Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuDown",Key=Gamepad_DPad_Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuLeft",Key=Gamepad_DPad_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MenuRight",Key=Gamepad_DPad_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_RightStick_Up,Scale=1.000000)
@@ -59,10 +67,8 @@ bUseMouseForTouch=False
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=3.000000)
 +AxisMappings=(AxisName="MoveForward",Key=MouseY,Scale=0.000000)
 +AxisMappings=(AxisName="MoveRight",Key=MouseX,Scale=1.000000)
-+AxisMappings=(AxisName="CameraForward",Key=Up,Scale=1.000000)
-+AxisMappings=(AxisName="CameraRight",Key=Right,Scale=1.000000)
-+AxisMappings=(AxisName="CameraForward",Key=Down,Scale=-1.000000)
-+AxisMappings=(AxisName="CameraRight",Key=Left,Scale=-1.000000)
++AxisMappings=(AxisName="CameraForward",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="CameraRight",Key=None,Scale=1.000000)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
