Removed the old slot 2d ui. Completely adapted the mouse controls to the new 3d ui, with right click making the base point to the mouse cursor. Fixed the bug that made the base change direction when a mouse button was clicked even if it was dragging the time or angle.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -58,17 +58,21 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="MenuLeft",Key=Gamepad_DPad_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="MenuRight",Key=Gamepad_DPad_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="LeftClick",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="RightClick",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_RightStick_Up,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_RightStick_Down,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=3.000000)
++AxisMappings=(AxisName="MoveRightBall",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveRightBall",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRightBall",Key=Gamepad_LeftX,Scale=3.000000)
 +AxisMappings=(AxisName="MoveForward",Key=MouseY,Scale=0.000000)
-+AxisMappings=(AxisName="MoveRight",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="MoveRightBall",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="CameraForward",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="CameraRight",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="MoveRightBase",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveRightBase",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRightBase",Key=Gamepad_LeftX,Scale=3.000000)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 DefaultTouchInterface=None
 ConsoleKey=None
