--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -8,7 +8,7 @@
 +AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 bUseMouseForTouch=False
 +ActionMappings=(ActionName="Fire",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FireDebug_1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FireDebug_2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -26,7 +26,7 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="RemoteTrigger",Key=Enter,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="RaiseCamera",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="LowerCamera",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Undeploy",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UndeployPlayerBase",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="MainCamera",Key=Home,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="NextCamera",Key=PageUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="PrevCamera",Key=PageDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -39,12 +39,10 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="FireSimulation",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SwitchCamera",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Undo",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="DestroyBalls",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DestroyBalls",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Pause",Key=Global_Play,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="RemoteTrigger",Key=Gamepad_FaceButton_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="RaiseCamera",Key=Gamepad_DPad_Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="LowerCamera",Key=Gamepad_DPad_Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Undeploy",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UndeployPlayerBase",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SwitchCamera",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Pause",Key=Global_Back,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ChargeUp",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -59,6 +57,14 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="MenuRight",Key=Gamepad_DPad_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="LeftClick",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="RightClick",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UndeployPlayerBase",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DeployBaseBall",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DeployBaseBall",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DeployBaseBall",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DeployBaseBall",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DeployBaseBall",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DeployBaseBall",Key=RightControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DeployBaseBall",Key=Enter,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_RightStick_Up,Scale=1.000000)
@@ -73,6 +79,11 @@ bUseMouseForTouch=False
 +AxisMappings=(AxisName="MoveRightBase",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightBase",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRightBase",Key=Gamepad_LeftX,Scale=3.000000)
++AxisMappings=(AxisName="TriggerAxis",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
++AxisMappings=(AxisName="TriggerAxis",Key=Gamepad_LeftTriggerAxis,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRightBall",Key=Right,Scale=3.000000)
++AxisMappings=(AxisName="MoveRightBall",Key=Left,Scale=-3.000000)
++AxisMappings=(AxisName="MoveRightBall",Key=Gamepad_RightX,Scale=1.000000)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 DefaultTouchInterface=None
 ConsoleKey=None
