Upgraded code to Unreal 4.7

--- a/Steamroll/Config/DefaultEditor.ini
+++ b/Steamroll/Config/DefaultEditor.ini
@@ -4,5 +4,7 @@ SimpleMapName=/Game/Maps/Example_Map
 [EditoronlyBP]
 bAllowClassAndBlueprintPinMatching=true
 bReplaceBlueprintWithClass= true
-bDontLoadBlueprintOutsideEditor= true
+bDontLoadBlueprintOutsideEditor= false
 bBlueprintIsNotBlueprintType= true
+
+ 
