--- a/Steamroll/Config/DefaultGame.ini
+++ b/Steamroll/Config/DefaultGame.ini
@@ -8,4 +8,20 @@ CopyrightNotice=Copyright Anticto Estudi Binari, SL. All rights reserved.
 ProjectID=E5536ABA43030C5D01E928970DF21FD3
 ProjectName=Steamroll
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="C:/Users/Jordi/Desktop/steamroll-pak")
+FullRebuild=True
+ForDistribution=False
+IncludeDebugFiles=False
+UsePakFile=False
+bGenerateChunks=False
+IncludePrerequisites=True
+IncludeCrashReporter=True
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
++DirectoriesToAlwaysCook=(Path="Blueprints")
++DirectoriesToAlwaysCook=(Path="Base")
+
 
