Some control improvements and fixed base ball left click.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -19,7 +19,7 @@ FOVScale=0.011110
 DoubleClickTime=0.000000
 +ActionMappings=(ActionName="Fire",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Fire",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FireDebug_1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FireDebug_2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FireDebug_4",Key=Four,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -69,7 +69,6 @@ DoubleClickTime=0.000000
 +ActionMappings=(ActionName="UndeployPlayerBase",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="DeployBaseBall",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="DeployBaseBall",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="DeployBaseBall",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="DeployBaseBall",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="DeployBaseBall",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="DeployBaseBall",Key=RightControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -86,8 +85,8 @@ DoubleClickTime=0.000000
 +AxisMappings=(AxisName="MoveRightBall",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="CameraForward",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="CameraRight",Key=None,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRightBase",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRightBase",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRightBase",Key=D,Scale=3.000000)
++AxisMappings=(AxisName="MoveRightBase",Key=A,Scale=-3.000000)
 +AxisMappings=(AxisName="MoveRightBase",Key=Gamepad_LeftX,Scale=3.000000)
 +AxisMappings=(AxisName="TriggerAxis",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="TriggerAxis",Key=Gamepad_LeftTriggerAxis,Scale=-1.000000)
