Reworked player base control and aiming to make yaw snap to angles instead of continuously getting closer forever.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -85,14 +85,14 @@ DoubleClickTime=0.000000
 +AxisMappings=(AxisName="MoveRightBall",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="CameraForward",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="CameraRight",Key=None,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRightBase",Key=D,Scale=3.000000)
-+AxisMappings=(AxisName="MoveRightBase",Key=A,Scale=-3.000000)
 +AxisMappings=(AxisName="MoveRightBase",Key=Gamepad_LeftX,Scale=3.000000)
 +AxisMappings=(AxisName="TriggerAxis",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="TriggerAxis",Key=Gamepad_LeftTriggerAxis,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRightBall",Key=Right,Scale=3.000000)
 +AxisMappings=(AxisName="MoveRightBall",Key=Left,Scale=-3.000000)
 +AxisMappings=(AxisName="MoveRightBall",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="MoveRightBaseKey",Key=D,Scale=3.000000)
++AxisMappings=(AxisName="MoveRightBaseKey",Key=A,Scale=-3.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=None
