New in-game menu to restart or quit to menu.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -74,6 +74,10 @@ DoubleClickTime=0.000000
 +ActionMappings=(ActionName="DeployBaseBall",Key=RightControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="DeployBaseBall",Key=Enter,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="UndeployPlayerBase",Key=RightControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GameMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GameMenu",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GameMenu",Key=Global_Menu,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GameMenu",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=0.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=0.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_RightStick_Up,Scale=0.000000)
