Corrected gamepad keys for menu.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -76,8 +76,8 @@ DoubleClickTime=0.000000
 +ActionMappings=(ActionName="UndeployPlayerBase",Key=RightControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GameMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GameMenu",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="GameMenu",Key=Global_Menu,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GameMenu",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GameMenu",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=0.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=0.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_RightStick_Up,Scale=0.000000)
