Several changes to be able to build and run a packaged game full-screen.

--- a/Steamroll/Config/DefaultGame.ini
+++ b/Steamroll/Config/DefaultGame.ini
@@ -9,8 +9,8 @@ ProjectID=E5536ABA43030C5D01E928970DF21FD3
 ProjectName=Steamroll
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="C:/Users/Jordi/Desktop/steamroll-pak")
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="C:/Users/alexei/Desktop/New folder")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
