--- a/Steamroll/Config/DefaultEditor.ini
+++ b/Steamroll/Config/DefaultEditor.ini
@@ -7,4 +7,10 @@ bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= false
 bBlueprintIsNotBlueprintType= true
 
+[AlwaysCookMaps]
++Map=/Game/Maps/01_Survivors/Survivors_01
++Map=/Game/Maps/02_Magatzem/02_Magatzem
++Map=/Game/Maps/03_Escher/03_Escher
++Map=/Game/Maps/03_Escher/04_Peanes/04_Peanes
++Map=/Game/Maps/03_Escher/05_Collapse/05_Collapse
  
