--- a/Steamroll/Config/DefaultEngine.ini
+++ b/Steamroll/Config/DefaultEngine.ini
@@ -27,19 +27,6 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default
-EditorStartupMap=/Game/Maps/01_Survivors/Survivors_01
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Engine/Maps/Entry
-GameDefaultMap=/Game/Maps/01_Survivors/Survivors_01
-GlobalDefaultGameMode=/Script/Engine.GameMode
-GlobalDefaultGameMode=/Game/Blueprints/SteamrollTestGameMode.SteamRollTestGameMode_C
-GlobalDefaultServerGameMode=None
-
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
 +Profiles=(Name="BlockAllDynamic",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldDynamic",CustomResponses=,HelpMessage="WorldDynamic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -135,5 +122,18 @@ GrabHandClosedCursor=None
 SlashedCircleCursor=None
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=1.000000),(Time=720.000000,Value=1.000000),(Time=1080.000000,Value=1.000000),(Time=8490.538086,Value=1.000000))),ExternalCurve=None)
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/01_Survivors/Survivors_01
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/00_Menu/Menu_01
+ServerDefaultMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Game/Blueprints/SteamrollTestGameMode.SteamRollTestGameMode_C
+GlobalDefaultServerGameMode=None
 
 
