--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -96,6 +96,8 @@ DoubleClickTime=0.000000
 +AxisMappings=(AxisName="MoveRightBall",Key=Left,Scale=-3.000000)
 +AxisMappings=(AxisName="MoveRightBaseKey",Key=D,Scale=3.000000)
 +AxisMappings=(AxisName="MoveRightBaseKey",Key=A,Scale=-3.000000)
++AxisMappings=(AxisName="TriggerAxis",Key=W,Scale=0.500000)
++AxisMappings=(AxisName="TriggerAxis",Key=S,Scale=-0.500000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=None
