Fixed rolling ball particle system problems. Improved control of the shot power with keyboard.

--- a/Steamroll/Config/DefaultInput.ini
+++ b/Steamroll/Config/DefaultInput.ini
@@ -78,6 +78,8 @@ DoubleClickTime=0.000000
 +ActionMappings=(ActionName="GameMenu",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GameMenu",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GameMenu",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="KeyChargeUp",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="KeyChargeDown",Key=S,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=0.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=0.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_RightStick_Up,Scale=0.000000)
@@ -96,8 +98,6 @@ DoubleClickTime=0.000000
 +AxisMappings=(AxisName="MoveRightBall",Key=Left,Scale=-3.000000)
 +AxisMappings=(AxisName="MoveRightBaseKey",Key=D,Scale=3.000000)
 +AxisMappings=(AxisName="MoveRightBaseKey",Key=A,Scale=-3.000000)
-+AxisMappings=(AxisName="TriggerAxis",Key=W,Scale=0.500000)
-+AxisMappings=(AxisName="TriggerAxis",Key=S,Scale=-0.500000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=None
